# curately

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  auth.py  config.py  main.py  scheduler.py  seed.py  supabase_client.py  time_utils.py
backend/routers/: articles.py  auth.py  digest.py  feeds.py  interests.py  newsletters.py  pipeline.py  rewind.py
backend/schemas/: __init__.py  articles.py  digest.py  feeds.py  interactions.py  interests.py  rewind.py  users.py
backend/services/: collector.py  (+8 more)
docs/: deployment-cloud.md  deployment.md  performance.md  qa-test-report.md  qa-test-scenarios.md  schema.sql  security-audit.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: check_commit_msg_no_korean.py  check_no_korean.py  configure_cloud_scheduler.sh  deploy_backend_cloud_run.sh  deploy_frontend_cloudflare_pages.sh  smoke_backend_post_deploy.sh  smoke_frontend_login_post_deploy.sh
tests/: conftest.py  test_articles.py  test_articles_router.py  test_auth.py  test_bookmarked.py  test_collector.py  test_config_keys.py  test_digest.py  test_feeds.py  test_health.py  test_interactions.py  test_interests.py  test_logging_config.py  test_newsletters.py  test_pipeline.py  test_pipeline_routes.py  test_rewind.py  test_scheduler.py  test_scorer.py  test_scraper.py  test_summarizer.py  test_supabase_client.py
(+72 files in other folders)
