[project]
name = "curately"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "google-genai>=1.63.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "supabase>=2.28.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "types-pyyaml>=6.0.12.20250915",
]
